@@ -1,56 +1,92 @@
-import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
+import java.net.URI
+import java.nio.file.Files
+import java.nio.file.StandardCopyOption
 
 plugins {
     id("java")
-    id("me.filippov.gradle.jvm.wrapper")
-    kotlin("jvm") version "1.7.10"
 }
 
 group = "com.intellij.idea"
 version = "SNAPSHOT"
 
 repositories {
-    mavenCentral()
+  mavenCentral()
+  maven { url = URI("https://cache-redirector.jetbrains.com/intellij-dependencies") }
 }
 
 dependencies {
   implementation("com.google.code.gson", "gson", "2.9.1")
-  implementation(kotlin("stdlib-jdk8"))
+  implementation("org.jetbrains.intellij.deps", "async-profiler", "2.9-15")
 }
 
-val fatJar = task("fatJar", type = Jar::class) {
-  dependsOn.addAll(listOf("compileJava", "compileKotlin", "processResources")) // We need this for Gradle optimization to work
-  archiveClassifier.set("standalone") // Naming the jar
-  duplicatesStrategy = DuplicatesStrategy.EXCLUDE
+tasks.compileJava {
+  @Suppress("SpellCheckingInspection")
+  options.compilerArgs = listOf("--add-modules=jdk.jcmd", "--add-exports=jdk.jcmd/sun.tools.jps=ALL-UNNAMED")
+}
+
+task("fatJar", type = Jar::class) {
+  dependsOn.addAll(listOf("compileJava", "processResources")) // We need this for Gradle optimization to work
+
   archiveFileName.set("app.jar")
-  manifest {
-    attributes["Main-Class"] = "com.intellij.idea.Main"
-  }
-  val sourcesMain = sourceSets.main.get()
-  val contents = configurations.runtimeClasspath.get()
-    .map { if (it.isDirectory) it else zipTree(it) } +
-    sourcesMain.output
+  archiveClassifier.set("standalone") // Naming the .jar file
+
+  duplicatesStrategy = DuplicatesStrategy.EXCLUDE
+  val contents =
+    configurations.runtimeClasspath.get().map { if (it.isDirectory) it else zipTree(it) } +
+    sourceSets.main.get().output
   from(contents)
 }
 
-val jbrsdkVersion: String by project
-val jbrsdkBuildNumber: String by project
+val jbrSdkVersion: String by project
+val jbrSdkBuildNumber: String by project
 
-jvmWrapper {
-    winJvmInstallDir = "gradle-jvm"
-    unixJvmInstallDir = "gradle-jvm"
-    linuxAarch64JvmUrl = "https://cache-redirector.jetbrains.com/intellij-jbr/jbrsdk-$jbrsdkVersion-linux-aarch64-b$jbrsdkBuildNumber.tar.gz"
-    linuxX64JvmUrl = "https://cache-redirector.jetbrains.com/intellij-jbr/jbrsdk-$jbrsdkVersion-linux-x64-b$jbrsdkBuildNumber.tar.gz"
-    macAarch64JvmUrl = "https://cache-redirector.jetbrains.com/intellij-jbr/jbrsdk-$jbrsdkVersion-osx-aarch64-b$jbrsdkBuildNumber.tar.gz"
-    macX64JvmUrl = "https://cache-redirector.jetbrains.com/intellij-jbr/jbrsdk-$jbrsdkVersion-osx-x64-b$jbrsdkBuildNumber.tar.gz"
-    windowsX64JvmUrl = "https://download.oracle.com/java/18/archive/jdk-18.0.1.1_windows-x64_bin.zip"
+task("downloadJbr") {
+  val (os, arch) = getOsAndArch()
+  val output = project.buildDir.toPath().resolve("jbr")
+
+  onlyIf {
+    val release = output.resolve("release")
+    !Files.isRegularFile(release) || Files.lines(release).use { lines ->
+      lines.noneMatch { it.startsWith("IMPLEMENTOR_VERSION=") && it.contains(jbrSdkVersion) && it.contains(jbrSdkBuildNumber) }
+    }
+  }
+
+  doLast {
+    val tmp = project.buildDir.toPath().resolve("tmp")
+    Files.createDirectories(tmp)
+
+    val file = Files.createTempFile(tmp, "jbr_", ".tgz")
+    val uri = URI("https://cache-redirector.jetbrains.com/intellij-jbr/jbrsdk-${jbrSdkVersion}-${os}-${arch}-b${jbrSdkBuildNumber}.tar.gz")
+    uri.toURL().openStream().use { Files.copy(it, file, StandardCopyOption.REPLACE_EXISTING) }
+
+    val dir = tmp.resolve(file.fileName.toString().replace(".tgz", ""))
+    copy {
+      from(tarTree(file))
+      into(dir)
+    }
+
+    val content = Files.list(dir).use { it.toList() }
+    val jbr = if (content.size == 1) content[0] else dir
+    delete(output)
+    Files.move(jbr, output)
+
+    delete(file, dir)
+  }
 }
 
-val compileKotlin: KotlinCompile by tasks
-compileKotlin.kotlinOptions {
-  jvmTarget = "1.8"
-}
-val compileTestKotlin: KotlinCompile by tasks
-compileTestKotlin.kotlinOptions {
-  jvmTarget = "1.8"
+fun getOsAndArch(): Pair<String, String> {
+  val osName = System.getProperty("os.name", "").toLowerCase()
+  val os = if (osName.startsWith("windows")) "windows"
+    else if (osName.startsWith("mac")) "osx"
+    else if (osName.startsWith("linux")) "linux"
+    else throw UnsupportedOperationException("Unsupported OS: '${osName}'")
+
+  @Suppress("SpellCheckingInspection")
+  val arch = when (val archName = System.getProperty("os.arch", "").toLowerCase()) {
+    "x86_64", "amd64" -> "x64"
+    "aarch64", "arm64" -> "aarch64"
+    else -> throw UnsupportedOperationException("Unsupported architecture: '${archName}'")
+  }
+
+  return os to arch
 }
